# WeLink

./: .gitignore  .version-bump.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE.md  requirements.txt
.claude/: AGENTS.md  settings.json  workflow-stage.yaml  workflow-state.yaml
.claude-plugin/: marketplace.json  plugin.json
.conductor/: settings.toml
.github/: linked-issues.yaml  openspec-config.yml  pull_request_template.md
designs/: .gitkeep
issue-11/: README.md  documents.yaml  prd.md  workflow-stage.yaml
issue-12/: documents.yaml  workflow-stage.yaml
issue-3/: documents.yaml  workflow-stage.yaml
issue-33/: workflow-stage.yaml
issue-47/: workflow-stage.yaml
issue-6/: documents.yaml  workflow-stage.yaml
knowledge/: 00-index.md  welink-master-framework-architecture-review.md  welink-master-framework.md
oss/: README.md  projects.yaml
products/: README.md
tools/lincoln-record/: Cargo.toml
tools/lincoln-record/diarize/: diarize.py  merge.py
tools/lincoln-record/src/: cli.rs  config.rs  lib.rs  main.rs
tools/lincoln-record/src/audio/: devices.rs  mod.rs  resampler.rs  saver.rs  source.rs
tools/lincoln-record/src/audio/capture/: microphone.rs
tools/lincoln-record/src/model/: mod.rs
tools/lincoln-record/src/output/: metadata.rs  mod.rs  transcript.rs
tools/lincoln-record/src/transcription/: diarization.rs  mod.rs  provider.rs  whisper.rs
tools/lincoln-record/tests/: cli_args.rs  config_test.rs  devices_test.rs  diarization_tests.rs  integration_tests.rs  model_test.rs  transcription_tests.rs
(+468 files in other folders)
