[package]
name = "lincoln-record"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
crossbeam-channel = "0.5.16"
dirs = "6.0.0"
env_logger = "0.11.11"
hound = "3.5.1"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "signal", "fs"] }
toml = "0.8"
ureq = "3.0"
whisper-rs = { version = "0.14", features = ["metal"] }

[dev-dependencies]
tempfile = "3.27.0"
